[gd_scene load_steps=4 format=3 uid="uid://clid6pryr5sf5"]

[ext_resource type="Script" path="res://objects/Stage_1/Machines/ManualSqueezer.gd" id="1_s1ihr"]
[ext_resource type="Script" path="res://objects/Stage_1/Machines/Lever.gd" id="2_0506c"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ds5sd"]

[node name="ManualSqueezer" type="Node3D"]
script = ExtResource("1_s1ihr")

[node name="Box" type="Node3D" parent="."]

[node name="WallSide1" type="CSGBox3D" parent="Box"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)
size = Vector3(1, 1, 0.1)

[node name="WallSide2" type="CSGBox3D" parent="Box"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
size = Vector3(1, 1, 0.1)

[node name="WallSide3" type="CSGBox3D" parent="Box"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)
size = Vector3(0.1, 1, 1)

[node name="WallSide4" type="CSGBox3D" parent="Box"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)
size = Vector3(0.1, 1, 1)

[node name="WallBottom" type="CSGBox3D" parent="Box"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
size = Vector3(1, 0.1, 1)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_ds5sd")

[node name="ProductLocation" type="Node3D" parent="."]

[node name="SqueezeLever" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0.332224, 0.0518242, 0.468864)

[node name="Lever" type="CSGBox3D" parent="SqueezeLever"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
size = Vector3(0.1, 0.5, 0.1)
script = ExtResource("2_0506c")

[node name="SqueezeThreshold" type="Node3D" parent="SqueezeLever"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, -0.332224, -0.368182, -0.294892)

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
